--- a/frontend/src/app/patient-profile/patient-profile.component.css
+++ b/frontend/src/app/patient-profile/patient-profile.component.css
@@ -40,6 +40,7 @@ button.update-button {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    width: 100%;
 }
 
 button.update-button:hover {
@@ -91,4 +92,10 @@ textarea {
     background-color: #dff0d8;
     color: #3c763d;
     border: 1px solid #d6e9c6;
+}
+
+.error {
+    font-size: 14px;
+    color: red;
+    padding: 10px 0px 0px 2px;
 }
