--- a/frontend/src/app/register/register.component.html
+++ b/frontend/src/app/register/register.component.html
@@ -12,6 +12,7 @@
                     <div *ngIf="username.errors?.['maxlength']">
                         Username must be at most 20 characters
                     </div>
+                    <div *ngIf="username.errors?.['isNullOrEmpty']">Username cannot be empty or whitespace!</div>
                 </mat-error>
             </mat-form-field>
             <mat-form-field class="inputs" [hideRequiredMarker]="true">
